pinctrl 阅读添加注释

--- a/luckfox/sysdrv/source/kernel/arch/arm/boot/dts/rv1106.dtsi
+++ b/luckfox/sysdrv/source/kernel/arch/arm/boot/dts/rv1106.dtsi
@@ -999,7 +999,7 @@
 	};
 
 	ioc: syscon@ff538000 {
-		compatible = "rockchip,rv1106-ioc", "syscon";
+		compatible = "rockchip,rv1106-oc", "syscon";
 		reg = <0xff538000 0x40000>;
 	};
 
